added concurrency for decreasing latency
