# internal/users/handler.go
@@ -7,6 +7,7 @@ import (
 	"fmt"
 	"log/slog"
 	"net/http"
+	"sync"
 
 	"github.com/gin-gonic/gin"
 
@@ -52,10 +53,11 @@ func (h *handler) RegisterRoutes(engine *gin.Engine) {
 // @Summary Create user
 // @Description Endpoint for creating and saving user to database
 // @Produce application/json
-// @Success 201 {object} User
+// @Success 201 {object} UserResponseDto
 // @Router /users [post]
 func (h *handler) CreateUser(ctx *gin.Context) {
 	var userDto UserRequestDto
+	var wg sync.WaitGroup
 
 	err := ctx.ShouldBindJSON(&userDto)
 	if err != nil {
@@ -67,68 +69,83 @@ func (h *handler) CreateUser(ctx *gin.Context) {
 	}
 	h.log.Debug("decoded user dto", slog.Any("dto", userDto))
 
-	resp, err := http.Get(fmt.Sprintf("%s%s", AgeApi, userDto.FirstName))
-	if err != nil {
-		logger.Error(h.log, "error during request to age api", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	defer resp.Body.Close()
-
 	var ageDto AgeRequestDto
-	err = json.NewDecoder(resp.Body).Decode(&ageDto)
-	if err != nil {
-		logger.Error(h.log, "error during decoding age info", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	h.log.Debug("decoded age dto", slog.Any("dto", ageDto))
-
-	resp, err = http.Get(fmt.Sprintf("%s%s", GenderApi, userDto.FirstName))
-	if err != nil {
-		logger.Error(h.log, "error during request to gender api", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	defer resp.Body.Close()
-
 	var genderDto GenderRequestDto
-	err = json.NewDecoder(resp.Body).Decode(&genderDto)
-	if err != nil {
-		logger.Error(h.log, "error during decoding gender info", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	h.log.Debug("decoded gender dto", slog.Any("dto", genderDto))
-
-	resp, err = http.Get(fmt.Sprintf("%s%s", NationalityApi, userDto.FirstName))
-	if err != nil {
-		logger.Error(h.log, "error during request to nationality api", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	defer resp.Body.Close()
-
 	var nationalityDto NationalityRequestDto
-	err = json.NewDecoder(resp.Body).Decode(&nationalityDto)
-	if err != nil {
-		logger.Error(h.log, "error during decoding nationality info", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	h.log.Debug("decoded nationality dto", slog.Any("dto", nationalityDto))
+
+	wg.Add(1)
+	go func() {
+		defer wg.Done()
+		resp, err := http.Get(fmt.Sprintf("%s%s", AgeApi, userDto.FirstName))
+		if err != nil {
+			logger.Error(h.log, "error during request to age api", err)
+			ctx.JSON(http.StatusInternalServerError, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+		defer resp.Body.Close()
+
+		err = json.NewDecoder(resp.Body).Decode(&ageDto)
+		if err != nil {
+			logger.Error(h.log, "error during decoding age info", err)
+			ctx.JSON(http.StatusInternalServerError, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+		h.log.Debug("decoded age dto", slog.Any("dto", ageDto))
+	}()
+
+	wg.Add(1)
+	go func() {
+		defer wg.Done()
+		resp, err := http.Get(fmt.Sprintf("%s%s", GenderApi, userDto.FirstName))
+		if err != nil {
+			logger.Error(h.log, "error during request to gender api", err)
+			ctx.JSON(http.StatusInternalServerError, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+		defer resp.Body.Close()
+
+		err = json.NewDecoder(resp.Body).Decode(&genderDto)
+		if err != nil {
+			logger.Error(h.log, "error during decoding gender info", err)
+			ctx.JSON(http.StatusInternalServerError, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+		h.log.Debug("decoded gender dto", slog.Any("dto", genderDto))
+	}()
+
+	wg.Add(1)
+	go func() {
+		defer wg.Done()
+		resp, err := http.Get(fmt.Sprintf("%s%s", NationalityApi, userDto.FirstName))
+		if err != nil {
+			logger.Error(h.log, "error during request to nationality api", err)
+			ctx.JSON(http.StatusInternalServerError, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+		defer resp.Body.Close()
+
+		err = json.NewDecoder(resp.Body).Decode(&nationalityDto)
+		if err != nil {
+			logger.Error(h.log, "error during decoding nationality info", err)
+			ctx.JSON(http.StatusInternalServerError, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+		h.log.Debug("decoded nationality dto", slog.Any("dto", nationalityDto))
+	}()
+
+	wg.Wait()
 
 	response := &UserResponseDto{
 		LastName:    userDto.LastName,
@@ -177,82 +194,20 @@ func (h *handler) getAllUsers(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, users)
 }
 
-//func (h *handler) parseMetadata() {
-//	ticker := time.NewTicker(time.Hour * 24)
-//	for {
-//		select {
-//		case <-ticker.C:
-//			resp, err := http.Get("https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY")
-//			if err != nil {
-//				logger.Error(h.log, "error during request to NASA API", err)
-//				return
-//			}
-//
-//			var dto Metadata
-//			err = json.NewDecoder(resp.Body).Decode(&dto)
-//			if err != nil {
-//				logger.Error(h.log, "error during json decoding", err)
-//				return
-//			}
-//
-//			h.log.Info("got response", slog.Any("metadata", dto))
-//			if dto.URL == "" {
-//				logger.Error(h.log, "empty url", nil)
-//				return
-//			}
-//
-//			resp, err = http.Get(dto.URL)
-//			if err != nil {
-//				logger.Error(h.log, "error during request to get image", err)
-//				return
-//			}
-//
-//			file, err := os.Create("tmp.jpg")
-//			if err != nil {
-//				logger.Error(h.log, "failed to create image file", err)
-//				return
-//			}
-//			defer file.Close()
-//
-//			_, err = io.Copy(file, resp.Body)
-//			if err != nil {
-//				logger.Error(h.log, "failed to create image file", err)
-//				return
-//			}
-//
-//			fileName := uuid.New().String() + ".jpg"
-//
-//			err = h.saveToMinio(context.Background(), h.minioClient, fileName, "tmp.jpg")
-//			if err != nil {
-//				logger.Error(h.log, "error during saving to minio", err)
-//				return
-//			}
-//
-//			dto.URL = fileName
-//
-//			err = h.repository.saveAPOD(context.Background(), &dto)
-//			if err != nil {
-//				logger.Error(h.log, "error during saving apod to database", err)
-//				return
-//			}
-//		}
-//	}
-//}
-
 // @Summary Users Endpoint Health Check
 // @Description Checking health of users endpoint
 // @Produce application/json
 // @Success 200 {string} nasa
 // @Router /users/health [get]
 func (h *handler) index(ctx *gin.Context) {
-	ctx.String(http.StatusOK, "nasa")
+	ctx.String(http.StatusOK, "users")
 }
 
-// @Summary The exact User
+// @Summary The exact user
 // @Description Endpoint for getting user with exact id
 // @Produce application/json
 // @Success 200 {object} UserResponseDto
-// @Param date path string true "Date"
+// @Param id path string true "id"
 // @Router /users/{id} [get]
 func (h *handler) getUser(ctx *gin.Context) {
 	id := ctx.Param("id")
@@ -275,14 +230,3 @@ func (h *handler) getUser(ctx *gin.Context) {
 
 	ctx.JSON(http.StatusOK, user)
 }
-
-//func (h *handler) saveToMinio(ctx context.Context, client *minio.Client, fileName, filePath string) error {
-//	info, err := client.FPutObject(ctx, "betera", fileName, filePath, minio.PutObjectOptions{ContentType: "image/jpg"})
-//	if err != nil {
-//		return err
-//	}
-//
-//	h.log.Info("image successfully uploaded", slog.String("info", fmt.Sprintf("%s of size %d", fileName, info.Size)))
-//
-//	return nil
-//}
